2009-12-17  Pavel Feldman  <pfeldman@dhcp-172-28-174-220.spb.corp.google.com>

Reviewed by Timothy Hatcher.

        Web Inspector: Incorrect Doctype.

        REGRESSION(4.0.4-TOT):Web Inspector: Incorrect Doctype
        https://bugs.webkit.org/show_bug.cgi?id=32671

        * inspector/elements-panel-structure-expected.txt:
        * inspector/elements-panel-structure.html:
2009-12-17  Pavel Feldman  <pfeldman@dhcp-172-28-174-220.spb.corp.google.com>

        Reviewed by Timothy Hatcher.

        Web Inspector: Incorrect Doctype.

        REGRESSION(4.0.4-TOT):Web Inspector: Incorrect Doctype
        https://bugs.webkit.org/show_bug.cgi?id=32671

        * inspector/InspectorDOMAgent.cpp:
        (WebCore::InspectorDOMAgent::buildObjectForNode):
        * inspector/front-end/DOMAgent.js:
        (WebInspector.DOMNode):

Canonical link: https://commits.webkit.org/43703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52279 268f45cc-cd09-0410-ab3c-d52691b4dbfc